--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,15 @@
             <version>0.9.5-RC2</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.jdom/jdom2 -->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom2</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+
+
     </dependencies>
     <build>
 
