--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,20 @@
         </dependency>
 
         <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.13-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.13-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <artifactId>TrayNotification</artifactId>
             <groupId>..</groupId>
             <scope>system</scope>
